Side bar showing photos now along with search function. Clicking on photo properly links to marker. Some styling done as well

--- a/google_flickr_api/index.html
+++ b/google_flickr_api/index.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="Scripts/jquery-1.9.1.js"></script>
     <script  ype="text/javascript" src="Scripts/bootstrap.js"></script>
 
+
     <!-- AngularJS -->
     <script type="text/javascript" src="Scripts/angular.js"></script>
     <script type="text/javascript" src="Scripts/angular-route.js"></script>
@@ -21,14 +22,14 @@
 
     <!-- AngularJS Services -->
     <script type="text/javascript" src="app/services/flickrAPI.service.js"></script>
-    <script type="text/javascript" src="app/services/googleMapsAPI.service.js"></script>
 
     <!-- AngularJS Controllers-->
     <script src="app/map/map.controller.js"></script>
 
-
+    <!-- Styles -->
     <link href="Content/bootstrap.css" rel="stylesheet" />
     <link href="Content/style.css" rel="stylesheet" />
+    <link href="Content/font-awesome.css" rel="stylesheet" />
 </head>
 <body>
     <ng-view></ng-view>
