--- a/google_flickr_api/app/map/map.html
+++ b/google_flickr_api/app/map/map.html
@@ -1,5 +1,15 @@
-﻿<div id="map">
+﻿<div id="map" class="col-md-9">
 </div>
-<div id="photos-window">
-
+<div id="photos-window" class="col-md-3">
+    <h1>Google Maps + Flickr</h1>
+    <form id="search" ng-submit="vm.getData()">
+        <input type="text" ng-model="vm.textSearch" />
+        <i class="fa fa-search" ng-click="vm.getData()"></i>
+    </form>
+    <div id="photos" class="row">
+        <div ng-repeat="photo in vm.currentPhotoList" class="photo" style="background: url({{ photo.url }}); background-size: cover; background-position: center;">
+            <div class="photo-overlay"  ng-click="vm.zoom(photo)">
+            </div>
+        </div>
+    </div>
 </div>
