--- a/google_flickr_api/index.html
+++ b/google_flickr_api/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Ritchie Prom's Flickr Map</title>
 	<meta charset="utf-8" />
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Google Maps -->
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3MbK7QC_uoj8blbDEhj5nwHwgigM85Cw"></script>
 
@@ -24,6 +24,7 @@
     <script type="text/javascript" src="app/services/flickrAPI.service.js"></script>
 
     <!-- AngularJS Controllers-->
+    <script src="app/start/start.controller.js"></script>
     <script src="app/map/map.controller.js"></script>
 
     <!-- Styles -->
