Added favicon and GitHub link. Removed unused service.

--- a/google_flickr_api/app/start/start.html
+++ b/google_flickr_api/app/start/start.html
@@ -11,5 +11,9 @@
             <input type="text" ng-model="vm.initialText" required/>
             <i class="fa fa-search" ng-click="vm.search()"></i>
         </form>
+        <p class="small">
+            <br />
+            Source can be found here: <a href="https://github.com/rsprom/google_flickr_api">GitHub</a>
+        </p>
     </div>
 </div>
