--- a/google_flickr_api/index.html
+++ b/google_flickr_api/index.html
@@ -4,7 +4,7 @@
     <title>Ritchie Prom's Flickr Map</title>
 	<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="/images/favicon.ico" />
+    <link rel="shortcut icon" href="images/favicon.ico" />
     <!-- Google Maps -->
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3MbK7QC_uoj8blbDEhj5nwHwgigM85Cw"></script>
 
